ECA-2734: Partial checkin of issue. Basic functionality has been implemented and func tested. Synchronization procedures, audit logging and automatization yet to be done. Also did a metric ton of exception cleanup in CryptoTokenSessionBean, because we were tossing a ton of uneeded stuff that doesn't need to be caught. Basic functional test against a mocked crypto token exists.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@16425 37aeb1de-b14b-0410-9a0e-82b28170d228